--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react"
   ],
   "dependencies": {
-    "overmind": "next",
+    "overmind": "^28.0.2",
     "svelte": "^3.20.1"
   },
   "devDependencies": {
